Adds alternative colors, working, but without displaying color codes

--- a/index.html
+++ b/index.html
@@ -14,10 +14,44 @@
 
     <main>
         <div class="color_display">
-        <input type="color">
-            <div class="hex display_value"></div>
-            <div class="rgb display_value"></div>
-            <div class="hsl display_value"></div>
+            <div class="color">
+                <input type="color">
+                <div class="hex display_value"></div>
+                <div class="rgb display_value"></div>
+                <div class="hsl display_value"></div>
+            </div>
+            <div class="alternatives">
+                <div class="color">
+                    <div class="alternative_color"></div>
+                    <div class="hex display_value"></div>
+                    <div class="rgb display_value"></div>
+                    <div class="hsl display_value"></div>
+                </div>
+                <div class="color">
+                    <div class="alternative_color"></div>
+                    <div class="hex display_value"></div>
+                    <div class="rgb display_value"></div>
+                    <div class="hsl display_value"></div>
+                </div>
+                <div class="color">
+                    <div class="alternative_color"></div>
+                    <div class="hex display_value"></div>
+                    <div class="rgb display_value"></div>
+                    <div class="hsl display_value"></div>
+                </div>
+                <div class="color">
+                    <div class="alternative_color"></div>
+                    <div class="hex display_value"></div>
+                    <div class="rgb display_value"></div>
+                    <div class="hsl display_value"></div>
+                </div>
+                <div class="color">
+                    <div class="alternative_color"></div>
+                    <div class="hex display_value"></div>
+                    <div class="rgb display_value"></div>
+                    <div class="hsl display_value"></div>
+                </div>
+            </div>
         </div>
     </main>
 
