Everything works, but code could be beautified

--- a/index.html
+++ b/index.html
@@ -14,38 +14,32 @@
 
     <main>
         <div class="color_display">
-            <div class="color">
-                <input type="color">
-                <div class="hex display_value"></div>
-                <div class="rgb display_value"></div>
-                <div class="hsl display_value"></div>
-            </div>
             <div class="alternatives">
-                <div class="color">
+                <div class="color alternative1">
                     <div class="alternative_color"></div>
                     <div class="hex display_value"></div>
                     <div class="rgb display_value"></div>
                     <div class="hsl display_value"></div>
                 </div>
-                <div class="color">
+                <div class="color alternative2">
                     <div class="alternative_color"></div>
                     <div class="hex display_value"></div>
                     <div class="rgb display_value"></div>
                     <div class="hsl display_value"></div>
                 </div>
-                <div class="color">
+                <div class="color original_color">
+                    <input type="color">
+                    <div class="hex display_value"></div>
+                    <div class="rgb display_value"></div>
+                    <div class="hsl display_value"></div>
+                </div>
+                <div class="color alternative3">
                     <div class="alternative_color"></div>
                     <div class="hex display_value"></div>
                     <div class="rgb display_value"></div>
                     <div class="hsl display_value"></div>
                 </div>
-                <div class="color">
-                    <div class="alternative_color"></div>
-                    <div class="hex display_value"></div>
-                    <div class="rgb display_value"></div>
-                    <div class="hsl display_value"></div>
-                </div>
-                <div class="color">
+                <div class="color alternative4">
                     <div class="alternative_color"></div>
                     <div class="hex display_value"></div>
                     <div class="rgb display_value"></div>
