Finished first version with Analogous colors

--- a/index.html
+++ b/index.html
@@ -17,33 +17,43 @@
             <div class="alternatives">
                 <div class="color alternative1">
                     <div class="alternative_color"></div>
+                    <div class="code_display">
                     <div class="hex display_value"></div>
                     <div class="rgb display_value"></div>
                     <div class="hsl display_value"></div>
+                    </div>
                 </div>
                 <div class="color alternative2">
                     <div class="alternative_color"></div>
+                    <div class="code_display">
                     <div class="hex display_value"></div>
                     <div class="rgb display_value"></div>
                     <div class="hsl display_value"></div>
+                    </div>
                 </div>
                 <div class="color original_color">
                     <input type="color">
+                    <div class="code_display">
                     <div class="hex display_value"></div>
                     <div class="rgb display_value"></div>
                     <div class="hsl display_value"></div>
+                    </div>
                 </div>
                 <div class="color alternative3">
                     <div class="alternative_color"></div>
+                    <div class="code_display">
                     <div class="hex display_value"></div>
                     <div class="rgb display_value"></div>
                     <div class="hsl display_value"></div>
+                    </div>
                 </div>
                 <div class="color alternative4">
                     <div class="alternative_color"></div>
+                    <div class="code_display">
                     <div class="hex display_value"></div>
                     <div class="rgb display_value"></div>
                     <div class="hsl display_value"></div>
+                    </div>
                 </div>
             </div>
         </div>
