Fixed point #1 from usability heuristics

--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
 <body>
 
     <main>
+        <h1>Analogous Harmonies</h1>
+        <p>Welcome to the color picker! This color picker gives you the analogous colors from the color you pick.</p>
         <div class="color_display">
+            <div class="color original_color">
+                <h2>Pick a color</h2>
+                <input type="color">
+                <div class="code_display">
+                    <div class="hex display_value"></div>
+                    <div class="rgb display_value"></div>
+                    <div class="hsl display_value"></div>
+                </div>
+            </div>
             <div class="alternatives">
                 <div class="color alternative1">
                     <div class="alternative_color"></div>
@@ -31,15 +42,8 @@
                     <div class="hsl display_value"></div>
                     </div>
                 </div>
-                <div class="color original_color">
-                    <input type="color">
-                    <div class="code_display">
-                    <div class="hex display_value"></div>
-                    <div class="rgb display_value"></div>
-                    <div class="hsl display_value"></div>
-                    </div>
-                </div>
                 <div class="color alternative3">
+                    <h2>Original color</h2>
                     <div class="alternative_color"></div>
                     <div class="code_display">
                     <div class="hex display_value"></div>
@@ -50,9 +54,17 @@
                 <div class="color alternative4">
                     <div class="alternative_color"></div>
                     <div class="code_display">
-                    <div class="hex display_value"></div>
-                    <div class="rgb display_value"></div>
-                    <div class="hsl display_value"></div>
+                        <div class="hex display_value"></div>
+                        <div class="rgb display_value"></div>
+                        <div class="hsl display_value"></div>
+                    </div>
+                </div>
+                <div class="color alternative5">
+                    <div class="alternative_color"></div>
+                    <div class="code_display">
+                        <div class="hex display_value"></div>
+                        <div class="rgb display_value"></div>
+                        <div class="hsl display_value"></div>
                     </div>
                 </div>
             </div>
